--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,10 +1,16 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+    sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: 'Roboto Mono', monospace;
+}
+
+* {
+    box-sizing: border-box;
+
 }
 
 code {
@@ -13,14 +19,45 @@ code {
 }
 
 
-.message {
-  border: 2px solid rgb(77, 48, 48);
-  border-radius: 5%;
-  margin: 20px;
-  padding: 10px 20px;
-  overflow-wrap: break-word;
+.form-container {
+  display: flex;
+  flex-direction: column;
+  border: 2px solid rgb(117, 79, 79);
+  box-shadow: 8px 8px 1px rgb(13, 13, 14);
+  background-color: rgba(248, 239, 239, 0.76);
+  margin: 40px 20px;
+  padding: 20px 20px;
+}
 
-  /* background-image: url('../public/images/dialogue-window-148174_640.png'); */
+.form-label {
+  margin-bottom: 15px;
+}
+
+.form-input {
+  height: 45px;
+  border: 1px solid rgb(177, 175, 175);
+}
+
+.form-btn {
+  border-radius: 20px;
+  width: 45%;
+  padding: 8px;
+  margin-top: 20px;
+  background-color: rgb(243, 149, 149);
+  color: rgb(63, 61, 61);
+  border: none;
+  font-family: 'Roboto Mono';
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.message {
+  border: 2px solid rgb(117, 79, 79);
+  box-shadow: 8px 8px 1px rgb(13, 13, 14);
+  background-color: rgba(248, 239, 239, 0.76);
+  margin: 40px 20px;
+  padding: 20px 10px;
+  overflow-wrap: break-word;
 
 }
 
@@ -29,5 +66,51 @@ h3 {
 }
 
 p {
-  font-size: 12px;
+  font-size: 10px;
+  color: grey;
+}
+
+.btn-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+} 
+
+.btn-counter {
+  display: flex;
+  align-items: center;
+}
+
+.heart-btn {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  padding: 10px;
+  margin-right: 10px;
+  cursor: pointer;
+  border: none;
+  background-color: rgb(233, 229, 229);
+}
+
+
+@media screen and (min-width: 700px) {
+
+  .message {
+    padding: 20px 20px;
+    max-width: 700px;
+    margin: 0 auto;
+    margin-bottom: 40px;
+
+  }
+
+  .form-container {
+    padding: 20px 20px;
+    max-width: 700px;
+    margin: 0 auto;
+    margin-bottom: 40px;
+    margin-top: 40px;
+
+  }
+
+
 }
