--- a/code/src/index.css
+++ b/code/src/index.css
@@ -5,9 +5,47 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+   
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+h4 {
+  margin: 0;
+  font-family: 'Segoe UI', sans-serif;
+}
+
+p {
+  margin: 0;
+}
+
+.chat-box {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid rgb(0, 0, 0) ;
+  width: 50vw;
+  margin-bottom: 25px;
+  box-shadow: 7px 7px #000;
+  padding: 15px;
+}
+
+.form-container {
+background-color: rgb(240, 240, 240);
+}
+
+.message-container {
+
+}
+
+
+
+
+
