--- a/code/src/index.css
+++ b/code/src/index.css
@@ -26,14 +26,14 @@ code {
 .input {
   background-color: whitesmoke;
   width: 97%;
-  height: 40px;
+  height: 60px;
   margin-top: 5px;
 }
 
 .input-error {
   background-color: red;
   width: 97%;
-  height: 40px;
+  height: 60px;
   margin-top: 5px;
 }
 
@@ -48,6 +48,7 @@ h4 {
   padding: 10px 15px;
   border-radius: 25px;
   margin: 10px 0px 10px 0px;
+  outline: none;
 }
 
 .message-body {
@@ -56,14 +57,10 @@ h4 {
   padding: 10px;
   margin: 30px 0px 30px 0px;
   box-shadow: 5px 5px 0px 0px;
-
 }
 
 .time-from-now {
-  
   text-align: right;
-  
-
   font-size: 10px;
   color: grey;
   margin: 0;
@@ -73,9 +70,16 @@ h4 {
   display: flex;
   orientation: column;
   align-items: center;
-  
+}
 
-  
+.btn-start {
+  background-color: rgb(226, 226, 226);
+  border: none;
+  border-radius: 40px;
+  height: 40px;
+  width: 40px;
+  margin-right: 10px;
+  outline: none;
 }
 
 .btn-like {
@@ -85,4 +89,5 @@ h4 {
   height: 40px;
   width: 40px;
   margin-right: 10px;
+  outline: none;
 }
