--- a/code/src/index.css
+++ b/code/src/index.css
@@ -11,3 +11,16 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  border: 2px solid black;
+  background-color: rgb(212, 211, 211);
+  box-shadow: 3px 3px #000;
+}
+
+.input-box {
+  border-color: grey;
+}
+
