--- a/code/src/styles/SendThought.css
+++ b/code/src/styles/SendThought.css
@@ -120,7 +120,7 @@
     background: #ffadad;
     color: #fff;
     width: 200px;
-    height: 150px;
+    height: 200px;
     text-align: center;
     position: absolute;
     left: calc(54% - 155px);
@@ -134,4 +134,12 @@
   align-items: center;
   margin: 10px; 
   padding: 10px;
+}
+
+.error-button-to-resume {
+  border: none;
+  border-radius: 25px;
+  font-size: 16px;
+  padding: 5px 15px;
+  color: #333232;
 }
