--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,3 +1,5 @@
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -9,7 +11,6 @@ body {
   flex-direction: column;
   align-items: center;
   
-   
 }
 
 code {
@@ -19,19 +20,27 @@ code {
 
 h4 {
   margin: 0;
-  font-family: 'Segoe UI', sans-serif;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 p {
   margin: 0;
+  font-family: 'Courier New', Courier, monospace;
 }
 
-.chat-box {
+label {
+  margin-bottom: 15px;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 12px;
+  font-weight: bold;
+}
+
+.chat-containers {
   position: relative;
   display: flex;
   flex-direction: column;
   border: 1px solid rgb(0, 0, 0) ;
-  width: 50vw;
+  width: 70vw;
   margin-bottom: 25px;
   box-shadow: 7px 7px #000;
   padding: 15px;
@@ -39,10 +48,56 @@ p {
 
 .form-container {
 background-color: rgb(240, 240, 240);
+margin-top: 70px;
+}
+
+.message-input-aria {
+ resize: none;
+ outline: none;
+ height: 15vw;
+ box-sizing: border-box;
+ padding: 10px;
+
+}
+
+.send-message-button {
+  display: flex;
+  justify-content: space-around;
+  align-items: baseline;
+  border: none;
+  background-color: #ffadae;
+  border-radius: 25px;
+  font-family: 'Courier New', Courier, monospace;
+  padding: 10px;
+  margin-top: 15px;
+  width: 70%;
+  font-size: 12px;
+  font-weight: bold;
+  
 }
 
 .message-container {
+background-color: khaki;
+}
 
+
+.send-like-button {
+  border: none;
+  display: inline-block;
+  height: 45px;
+  width: 45px;
+  margin: 10px;
+  border-radius: 50%;
+  background-color:  #ffadae;
+  padding-left: 13px;
+  
+}
+
+.like-heart {
+  display: table-cell;
+  vertical-align: middle; 
+  text-align: center; 
+  
 }
 
 
