--- a/code/src/index.css
+++ b/code/src/index.css
@@ -98,7 +98,7 @@ textarea {
   border-radius: 50%;
   background-color:rgba(208, 203, 203, 0.3);
   border:none;
-  font-size:16px;
+  font-size:14px;
 }
 
 .heart-button:hover{
@@ -121,10 +121,36 @@ textarea {
 }
 
 .likes-icon-count > p {
-  margin-left: 5px;
+  margin-left: 8px;
 }
-
 
 .date {
   font-style: italic;
+}
+
+.error-message {
+  border: 1px solid black;
+  background-color: whitesmoke;
+  width: 400px;
+  padding: 25px;
+  box-shadow: 5px 5px black;
+  font-size: 20px;
+  font-weight: 600;
+  margin-top: 150px;
+  text-align: center;
+  line-height: 24px;
+}
+
+.try-again-button {
+  width: fit-content;
+  border-radius: 20px;
+  background-color: rgba(255, 0,	0, 0.3);
+  border:none;
+  padding: 8px;
+  margin: 0 auto;
+}
+
+.try-again-button:hover {
+  background-color: rgba(255, 0,	0, 0.5);
+  transform:scale(1.1);
 }
