--- a/code/src/index.css
+++ b/code/src/index.css
@@ -6,6 +6,7 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: rgb(216, 241, 241);
 }
 
 .page-wrapper {
@@ -40,7 +41,9 @@ body {
   font-size: 0.8rem;
   font-weight: bold;
   color: #585757;
-  padding-left: 10px;
+  padding: 8px 0 0 10px;
+  outline: none;
+  resize: vertical;
 }
 
 .send-button {
@@ -54,6 +57,12 @@ body {
   border-radius: 40px;
   border-style: hidden;
   background: #fbb0b3;
+  outline: none;
+}
+
+.send-button:hover {
+  font-size: 0.85rem;
+  background: #fa8589;
 }
 
 .post-heart {
@@ -70,7 +79,6 @@ body {
   flex-direction: column;
   margin: 1rem;
   width: 22rem;
-  /* height: 7rem; */
   box-shadow: 6.5px 6.5px black;
   background: #FFFFFF;
   padding: 1rem;
@@ -100,11 +108,16 @@ body {
   margin: 2rem 0 0 0;
   display: flex;
   align-items: center;
-  color: #8c8b8b
+  color: #8c8b8b;
+  outline: none;
 }
 
+/* .like-button:hover {
+  background: #c4c3c3;
+} */
+
 .like-heart {
-  margin-left: 0.4rem;
+  margin-left: 0.35rem;
 }
 
 .x-operator {
@@ -113,11 +126,41 @@ body {
   color: #8c8b8b
 }
 
+.liked {
+  background: #fbb0b3;
+}
+
 .date {
   display: flex;
   justify-content: flex-end;
   font-size: 0.75rem;
   color: #c3c3c3;
-  /* position: absolute;
-  margin: 4rem 0 0 13rem; */
+}
+
+/*********** MESSAGES LIST ANIMATION ***********/
+
+.messagelist-box {
+	-webkit-animation: messagelist-box 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+	        animation: messagelist-box 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
+
+@-webkit-keyframes messagelist-box {
+  0% {
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+@keyframes messagelist-box {
+  0% {
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
 }
