--- a/code/src/index.css
+++ b/code/src/index.css
@@ -34,7 +34,7 @@ main {
 .loading-symbol {
   margin-top: 30px;
   border: 16px solid #f3f3f3;
-  border-top: 16px solid #3498db;
+  border-top: 16px solid pink;
   border-radius: 50%;
   width: 50px;
   height: 50px;
