--- a/code/src/index.css
+++ b/code/src/index.css
@@ -34,7 +34,7 @@ code {
   border: 1px solid black;
   box-shadow: 5px 5px black;
   padding: 10px;
-  margin-bottom: 30px;
+  margin: 30px 0;
   box-sizing: border-box;
   background-color: #EAEAEA;
   font-family: 'Lato';
@@ -102,6 +102,7 @@ code {
   font-size: 12px;
   color: black;
   margin: 0;
+  word-break: break-word;
 }
 
 .heart-time-container {
@@ -148,3 +149,6 @@ code {
   width: 14px;
 }
 
+.footer {
+  text-align: center;
+}
