--- a/code/src/index.css
+++ b/code/src/index.css
@@ -9,7 +9,7 @@
 body {
   margin: 0 auto;
   font-family: 'Roboto Mono', monospace;
-  background: #fcf2f2;
+  background: #fcf9f9;
 }
 
 .main-wrapper {
@@ -45,6 +45,7 @@ body {
   overflow-wrap: break-word;
   padding: 10px;
   font-size: 16px;
+  resize: none;
 }
 
 .the-count {
