--- a/code/src/index.css
+++ b/code/src/index.css
@@ -97,7 +97,11 @@ code {
 }
 
 .message {
-  height: 40px;
+  height: 42px;
+  padding-top: 1px;
+  overflow: hidden;
+  white-space: normal;
+  text-overflow: ellipsis;
   font-family: 'Menlo';
   font-size: 12px;
   color: black;
