--- a/code/src/index.css
+++ b/code/src/index.css
@@ -15,6 +15,29 @@ body {
   align-items: center;
 }
 
+/*********** HEADER ***********/
+
+.header-wrapper {
+  font-family: 'Lato', sans-serif;
+  text-align: center;
+}
+
+.title {
+  font-size: 2.5rem;
+  color: #f87175;
+  text-shadow: 2px 2px rgb(26, 25, 25);
+}
+
+.twitter-info {
+  letter-spacing: 1px;
+  font-size: 1rem;
+  font-family: 'Roboto Mono', monospace;
+}
+
+.summoning {
+  font-size: 1.7rem;
+}
+
 /*********** NEW MESSAGE FORM ***********/
 
 .message-box {
