--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 40px;
+  margin: 0px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -16,6 +16,11 @@ code {
   font-style: italic;
 }
 
+span {
+  margin: 0;
+  padding: 0;
+}
+
 .message-card,
 .message-form {
   background-color: #f2f0f0;
@@ -28,13 +33,22 @@ code {
   padding: 20px;
 }
 
-button {
+.form-btn {
   margin-top: 10px;
   width: 250px;
   background-color: #ffadad;
   border: none;
   padding: 10px;
   border-radius: 30px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.likes-btn {
+  width: 50px;
+  background-color: #ffadad;
+  border: none;
+  border-radius: 50%;
   font-weight: bold;
   cursor: pointer;
 }
@@ -51,4 +65,20 @@ button {
   margin-top: 0;
   margin-bottom: 5px;
   font-weight: bold;
+}
+
+.likes-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 20%;
+}
+
+/* Media Queries */
+
+@media (max-width: 720px) {
+  .message-card,
+  .message-form {
+    width: 300px;
+  }
 }
