--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,13 +1,16 @@
 body {
   margin: 40;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: 'Inconsolata', monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: 'Inconsolata', monospace;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
