--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 body {
@@ -16,6 +15,7 @@ code {
     monospace;
 }
 
+/*Styling whole app-container*/
 .app-container {
   display: flex;
   flex-direction:column;
@@ -23,6 +23,7 @@ code {
   font-family: 'Montserrat', sans-serif;
 }
 
+/*Styling form container*/
 .form-container {
   display: flex;
   flex-direction: column;
@@ -78,6 +79,8 @@ textarea:focus {
   font-weight: 200;
 }
 
+/*Styling message container*/
+
 .message-container {
   border: 1px solid black;
   background-color: white;
@@ -119,7 +122,6 @@ textarea:focus {
   background-color:rgba(208, 203, 203, 0.3);
 }
 
-
 .likes-icon-count {
   display: flex;
   align-items: center;
@@ -132,6 +134,8 @@ textarea:focus {
 .date {
   font-style: italic;
 }
+
+/*Styling error message*/
 
 .error-message {
   border: 1px solid black;
@@ -158,4 +162,11 @@ textarea:focus {
 .try-again-button:hover {
   background-color: rgba(255, 0,	0, 0.5);
   transform:scale(1.1);
+}
+
+/*Styling footer*/
+
+.footer {
+  text-align:center;
+  font-size: 12px;
 }
