--- a/code/src/index.css
+++ b/code/src/index.css
@@ -23,23 +23,53 @@ code {
   font-family: 'Montserrat', sans-serif;
 }
 
+/*Styling the header*/
+.header {
+  display:flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.header > h1 {
+  font-size: 20px;
+
+}
+
+.heart-img-header{
+  height: 16px;
+  width:16px;
+  margin: 10px;
+  animation: rotation 5s infinite linear;
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
+
 /*Styling form container*/
 .form-container {
   display: flex;
   flex-direction: column;
   border: 1px solid black;
   background-color: whitesmoke;
-  width: 380px;
+  width: 70%;
   padding: 25px;
   box-shadow: 5px 5px black;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 700;
+  margin:0 auto;
 }
 
 textarea {
   padding:10px;
   margin: 15px 0;
   resize:none;
+  font-size:14px;
 }
 
 textarea:focus {
@@ -61,12 +91,8 @@ textarea:focus {
   border-radius: 20px;
   background-color: rgba(255, 0,	0, 0.3);
   border:none;
-  padding: 8px;
-}
-
-.button:hover {
-  background-color: rgba(255, 0,	0, 0.5);
-  transform:scale(1.1);
+  padding: 4px;
+  font-size: 10px;
 }
 
 .submit-charcount-container {
@@ -75,7 +101,7 @@ textarea:focus {
 }
 
 .submit-charcount-container > p {
-  font-size: 12px;
+  font-size: 8px;
   font-weight: 200;
 }
 
@@ -84,20 +110,21 @@ textarea:focus {
 .message-container {
   border: 1px solid black;
   background-color: white;
-  width: 380px;
+  width: 70%;
   padding: 25px;
   box-shadow: 5px 5px black;
-  margin: 30px 0;
+  margin: 30px auto;
 }
 
 .message-text {
   overflow-wrap: break-word;
+  font-size: 12px;
 }
 
 .heart-date-container {
   display: flex;
   justify-content: space-between;
-  font-size: 12px;
+  font-size: 10px;
 }
 
 .heart-button {
@@ -107,11 +134,6 @@ textarea:focus {
   background-color:rgba(208, 203, 203, 0.3);
   border:none;
   font-size:16px;
-}
-
-.heart-button:hover{
-  cursor: pointer;
-  transform: scale(1.1);
 }
 
 .heart-active {
@@ -168,5 +190,102 @@ textarea:focus {
 
 .footer {
   text-align:center;
-  font-size: 12px;
+  font-size: 10px;
+}
+
+.heart-img {
+  width: 16px;
+}
+
+/*Media queries*/
+
+@media (min-width: 768px){
+  .header {
+    display:flex;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+
+  .header > h1 {
+    font-size: 36px;
+  }
+  
+  .heart-img-header{
+    height: 30px;
+    width: 30px;
+    margin: 20px;
+    animation: rotation 5s infinite linear;
+  }
+
+  .form-container {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+    background-color: whitesmoke;
+    width: 380px;
+    padding: 25px;
+    box-shadow: 5px 5px black;
+    font-size: 20px;
+    font-weight: 700;
+  }
+
+  textarea {
+    font-size:16px;
+  }
+
+  .button {
+    width: fit-content;
+    border-radius: 20px;
+    background-color: rgba(255, 0,	0, 0.3);
+    border:none;
+    padding: 8px;
+    font-size: 16px;
+  }
+  
+  .button:hover {
+    background-color: rgba(255, 0,	0, 0.5);
+    transform:scale(1.1);
+  }
+
+  .message-container {
+    border: 1px solid black;
+    background-color: white;
+    width: 380px;
+    padding: 25px;
+    box-shadow: 5px 5px black;
+    margin: 30px 0;
+  }
+
+  .message-text {
+    font-size: 20px;
+  }
+
+  .heart-date-container {
+    display: flex;
+    justify-content: space-between;
+    font-size: 16px;
+  }
+  
+  .heart-button {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color:rgba(208, 203, 203, 0.3);
+    border:none;
+    font-size:16px;
+  }
+
+  .heart-button:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+  }
+
+  .footer {
+    text-align:center;
+    font-size: 12px;
+  }
+  
+  .heart-img {
+    width: 20px;
+  }
 }
