--- a/code/src/index.css
+++ b/code/src/index.css
@@ -35,7 +35,7 @@ code {
 
 }
 
-/* .heart-img-header{
+.heart-img-header{
   height: 16px;
   width:16px;
   margin: 10px;
@@ -49,7 +49,7 @@ code {
   to {
     transform: rotate(359deg);
   }
-} */
+}
 
 /*Styling form container*/
 .form-container {
