--- a/code/src/index.css
+++ b/code/src/index.css
@@ -10,11 +10,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-.form-wrapper {
+.message-wrapper {
   margin: 0;
   padding: 30px 0;
   width: 300px;
   max-width: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .send-message-card {
   display: block;
@@ -48,6 +51,8 @@ code {
   font-size: 15px;
   margin: 10px 0 30px 0;
   padding: 5px;
+  color: #442E2E;
+  cursor: pointer;
 }
 .submit-button:hover {
   opacity: 0.7 ;
@@ -78,7 +83,6 @@ code {
   color: #CDCDCD;
   float: inline-end;
   padding-left: 130px;
-  /* padding-right: 10px; */
 }
 .heart-like-button {
   width: 30px;
@@ -86,23 +90,27 @@ code {
   border-radius: 50%;
   border: none; 
   background-color: #EAEAEA;
+  cursor: pointer;
 }
 .pink-heart {
   background-color: #FFADAD;
 }
-
-
 .like-counter {
   font-size: 12px;
   padding-left: 10px;
   color: #ABABAB;
 }
+.characters-counter {
+  float: right;
+  color: #858585;
+  font-size: 10px;
+}
+.red-counter {
+  color: rgb(210, 70, 70);
+}
 
-/* @media (max-width: 768px) {
-  .form-wrapper{
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   align-items: center;
+@media (max-width: 768px) {
+  .received-message-container {
+  width: 300px;
   }
-}  */
+} 
