--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: 'Menlo';
+  src: local('Menlo'), url(./fonts/Menlo-Regular.woff) format('woff');
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -10,4 +17,125 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+#root {
+  display: flex;
+  justify-content: center;
+}
+
+form {
+  border: 1px solid #000;
+  box-shadow: 5px 6px #000;
+  padding: 10px;
+  background-color: #f2f0f0;
+  font-family: "Manlo", monospace;
+  font-weight: bold;
+  font-size: 12px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+}
+
+.text-input {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-family: "Inconsolata", monospace;
+  padding: 10px;
+  border: 1px solid #a4a4a4;
+  background-color: #fff;
+  box-sizing: border-box;
+  resize: none;
+}
+
+.send-button {
+  display: flex;
+  align-items: center;
+  height: auto;
+  border-top-left-radius: 17px;
+  border-bottom-left-radius: 17px;
+  border-top-right-radius: 17px;
+  border-bottom-right-radius: 17px;
+  border: none;
+  background-color: #ffadad;
+  font-family: "Inconsolata", monospace;
+  font-weight: bold;
+  font-size: 12px;
+  padding: 7px;
+}
+
+.thought-card {
+  border: 1px solid #000;
+  width: 280px; 
+  margin-bottom: 30px;
+  box-shadow: 5px 6px #000;
+  padding: 10px;
+  font-size: 14px;
+}
+
+.bottom-info-container {
+  margin-top: 5px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.likes-container {
+  display: flex;
+  align-items: center;
+}
+
+.like-counter {
+  color: #a4a4a4;
+}
+
+h4 {
+  font-family: "Manlo", monospace;
+  font-weight: 400;
+  margin: 0;
+  margin-top: 10px;
+}
+
+p {
+  font-family: "Manlo", monospace;
+  color: #c9c9c9;
+  font-size: 12px;
+}
+
+img {
+  width: 20px;
+  height: 20px;
+}
+
+.heart-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: none;
+  margin-right: 5px;
+}
+
+.liked-heart-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: none;
+  margin-right: 5px;
+  background-color: #ffadad;
+}
+
+button:hover {
+  cursor: pointer;
 }
